resolvendo problemas de contraste entre as cores

--- a/apps/web/src/global.css
+++ b/apps/web/src/global.css
@@ -4,7 +4,7 @@
     /* --background: #f8f8f2; */
     --background: #ffffff;
     --foreground: #282a36;
-    --cyan: #6cb9ca;
+    --cyan: #559da7;
     --green: #55be6f;
     --orange: #ffb86c;
     --pink: #db589a;
